  - new function getMark6GathererSourceFileSize() allows previous behavior.
* mark6Gather() : fix bug which sometimes caused one or more blocks from end of a gather to be ignored. 
  - with this fix, and with the above getMark6GathererFileSize() change, the resultant file sizes should be in accord.
* mark6Gather() : seeks bigger than NDISK*2^31 were broken.  Now seem fixed.

Version 2.0.2
* Post DiFX-2.6
* mk6gather: add command line arguments for output and verbosity
* mk6gather: add command line argument for max bytes to copy
* add "mk6cp" script that uses "cp"-like syntax
* mk6gather: add "append" (still experimental) and "skip" options
* mark6gather seeking: fix for seek near start of file
* mk6ls: add ability to match patterns (like ls does)
* mk6ls: add faster option to get file size (--bytes or -b)

Version 2.0.1
* add "mark6gather" functions (were in vdifio).  These have partially overlapping functionality w/ the mark6sg functions.
* Version for DiFX-2.6, Mar 4, 2019

Version 2.0.0
* libmark6sg: added creat(), write(), recvfile()
* fuseMk6: added wrapping calls to creat() and write() for module write suppor

Version 1.2.0
* libmark6sg: added automatic caching of scatter-gather block list metadata (/tmp/mark6_fuse_autocache_<hash>)
              at the first access to a scan its cache is built and it is re-used during any later accesses
* Version for DiFX-2.5, May 16, 2017

Version 1.1.9
* fuseMk6, mk6copy, m6sg_gather: use MARK6_ROOT env var if available

Version 1.1.8
* libmark6sg: simplified the prefetch method, average throughput
              now slightly better and a lot more consistent
* fuseMk6: refresh the scanlist when recordings change

Version 1.1.7
* fuseMk6 (now v1.11): fixed FUSE open() return value, error code instead of file descriptor,
           now multiple files can be opened at the same time
* fuseMk6: added initial estimate of scan size in bytes using file fragment sizes minus guessed headers