@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 """
 Mark6 utility   m6sg_mount v2.1
 
@@ -71,7 +71,7 @@ def list_MPT2SAS_disks():
 			t = re.search('\/target([0-9]*:[0-9]*:[0-9]*)\/',dp).group(1)
 			t = [int(x) for x in t.split(':')]
 			if (t[-1] > 15):
-				# print ('Unexpected target nr %d not in range of 0-15!' % (t[-1]))
+				# print('Unexpected target nr %d not in range of 0-15!' % (t[-1]))
 				t[-1] = int(t[-1]) % 16
 			entry['mk6_module'] = (1 + t[-1]/8) + 2*m  # 1-based count
 			entry['mk6_slot']   = t[-1] % 8            # 0-based count
@@ -81,13 +81,13 @@ def list_MPT2SAS_disks():
 				entry['mk6_mountpoint'] = MARK6_META % (entry['mk6_module'],entry['mk6_slot'])
 			else:
 				entry['mk6_mountpoint'] = None
-			#print dp,h,m,t,dp[-1],entry['mk6_module'],entry['mk6_slot'],entry['mk6_mountpoint']
+			#print(dp,h,m,t,dp[-1],entry['mk6_module'],entry['mk6_slot'],entry['mk6_mountpoint'])
 			list.append(entry)
 	list = sorted(list, key=lambda k: k['mk6_mountpoint'])
 	return list
 
 def mount(dev,dir):
-	print ('Mounting %s to %s' % (dev,dir))
+	print('Mounting %s to %s' % (dev,dir))
 	p = []
 	p.append( subprocess.Popen(["/usr/bin/sudo", "/bin/mount", dev, dir], stdout=subprocess.PIPE, stderr=subprocess.PIPE) )
 	p.append( subprocess.Popen(["/usr/bin/sudo", "/bin/chmod", "775", dir], stdout=subprocess.PIPE, stderr=subprocess.PIPE) )
@@ -95,7 +95,7 @@ def mount(dev,dir):
 	return p
 
 def unmount(dir):
-	print ('Unmounting %s' % (dir))
+	print('Unmounting %s' % (dir))
 	p = subprocess.Popen(["/usr/bin/sudo", "/bin/umount", dir], stdout=subprocess.PIPE, stderr=subprocess.PIPE)
 	return [p]
 
@@ -122,7 +122,7 @@ def unmount_invisible():
 	for entry in allmounts:
 		if "/mnt/disks/" in entry:
 			dev = entry.split()[0]
-			print entry, dev
+			print(entry, dev)
 			p.append( subprocess.Popen(["/usr/bin/sudo", "/bin/umount", dev], stdout=subprocess.PIPE, stderr=subprocess.PIPE) )
 	for sp in p:
 		(o,rc) = sp.communicate()
@@ -130,10 +130,10 @@ def unmount_invisible():
 def main(argv=sys.argv):
 
 	if (not(len(argv) in [1,2]) or (len(argv)==2 and argv[1]!='-u')):
-		print __doc__
+		print(__doc__)
 		sys.exit(-1)
 
-	if (len(argv)==2 and argv[1]=='-u'):
+	if len(argv)==2 and argv[1]=='-u':
 		procs = unmount_all()
 		unmount_invisible()
 	else:
@@ -142,8 +142,8 @@ def main(argv=sys.argv):
 	if CHECK_RESULTS:
 		for p in procs:
 			(o,rc) = p.communicate()
-			if (len(rc)>0):
-				print rc
+			if len(rc)>0:
+				print(rc)
 
 if __name__ == "__main__":
 	main(sys.argv)
