@@ -7,6 +7,7 @@ Version 2.0.3
 * mark6Gather() : fix bug which sometimes caused one or more blocks from end of a gather to be ignored. 
   - with this fix, and with the above getMark6GathererFileSize() change, the resultant file sizes should be in accord.
 * mark6Gather() : seeks bigger than NDISK*2^31 were broken.  Now seem fixed.
+* mark6Gather() : operations on Mark6 files that are smaller than a block size seem to work now.
 
 Version 2.0.2
 * Post DiFX-2.6
